--- a/empresa/index.html
+++ b/empresa/index.html
@@ -828,8 +828,7 @@
     <!-- Notification Container -->
     <div id="notification-container" style="position: fixed; top: 20px; right: 20px; z-index: 1000;"></div>
 
-    <script src="catalog.js"></script>
-    <script src="cart-integration.js"></script>
+    <script src="mobile-menu.js"></script>
     <script src="script.js?v=3"></script>
 
     <!-- Shopify Integration -->
