--- a/empresa/products.html
+++ b/empresa/products.html
@@ -471,6 +471,7 @@
     <script src="script.js"></script>
     <script src="shopping.js"></script>
     <script src="catalog.js"></script>
+    <script src="mobile-menu.js"></script>
 </body>
 
 </html>
