--- a/empresa/technical.html
+++ b/empresa/technical.html
@@ -157,6 +157,7 @@
             });
         </script>
         <script src="script.js"></script>
+        <script src="mobile-menu.js"></script>
 </body>
 
 </html>
