--- a/empresa/eco.html
+++ b/empresa/eco.html
@@ -86,58 +86,41 @@
 
 <body class="font-sans text-slate-800 bg-white relative">
 
-    <!-- NAVBAR -->
-    <nav
-        class="fixed w-full z-50 bg-slate-900/95 backdrop-blur-md border-b border-slate-700 transition-all duration-300">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-20">
-                <!-- Logo -->
-                <div class="flex-shrink-0 flex items-center gap-3">
-                    <a href="index.html" class="hover:opacity-80 transition">
-                        <img src="logo/logo-white.png" alt="Ultra Seco" class="h-10">
-                    </a>
-                    <div class="h-8 w-px bg-slate-700 mx-1"></div>
-                    <span class="text-2xl font-extrabold tracking-tighter text-white">ECO <span
-                            class="text-yellow-500">CAPTURADOR</span>™</span>
-                </div>
+    <!-- Navigation Bar -->
+    <header
+        class="fixed top-0 left-0 w-full z-[9999] bg-slate-900/95 backdrop-blur-md border-b border-slate-700 transition-all duration-300 no-print">
+        <nav
+            style="max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0.75rem 5%;">
+            <a href="index.html" class="logo">
+                <img src="images/logo.png" alt="Ultra Seco" style="height: 40px;">
+            </a>
 
-                <!-- Desktop Menu -->
-                <div class="hidden md:flex space-x-8 items-center">
-                    <a href="index.html" class="text-slate-400 hover:text-white text-sm transition">Volver a Ultra
-                        Seco</a>
-                    <a href="#que-es" class="text-white hover:text-yellow-400 transition-colors">Qué es</a>
-                    <a href="#como-funciona" class="text-white hover:text-yellow-400 transition-colors">Uso</a>
-                    <a href="#roi" class="text-white hover:text-yellow-400 transition-colors">Calculadora</a>
-                    <a href="#contacto"
-                        class="bg-yellow-600 hover:bg-yellow-700 text-slate-900 px-5 py-2 rounded-full font-bold transition-colors">
-                        Solicitar Demo
-                    </a>
-                </div>
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()" aria-label="Toggle menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
 
-                <!-- Mobile Menu Button -->
-                <div class="md:hidden">
-                    <button id="menu-btn" class="text-gray-300 hover:text-white">
-                        <i data-lucide="menu" size="28"></i>
+            <ul class="nav-links flex items-center gap-6 list-none m-0 p-0">
+                <li><a href="index.html#inicio" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Inicio</a></li>
+                <li><a href="index.html#asesor" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Asesor IA</a></li>
+                <li><a href="index.html#productos" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Productos</a></li>
+                <li>
+                    <button onclick="window.history.back()"
+                        class="flex items-center gap-2 text-white hover:text-blue-400 font-bold bg-transparent border-none cursor-pointer transition">
+                        <i class="fa-solid fa-arrow-left"></i> Volver
                     </button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden bg-slate-800 px-4 pt-2 pb-6 space-y-2">
-            <a href="index.html"
-                class="block px-3 py-2 text-slate-400 hover:text-white hover:bg-slate-700 rounded-md">Volver a Ultra
-                Seco</a>
-            <a href="#que-es" class="block px-3 py-2 text-gray-300 hover:text-white hover:bg-slate-700 rounded-md">Qué
-                es</a>
-            <a href="#como-funciona"
-                class="block px-3 py-2 text-gray-300 hover:text-white hover:bg-slate-700 rounded-md">Uso</a>
-            <a href="#roi"
-                class="block px-3 py-2 text-gray-300 hover:text-white hover:bg-slate-700 rounded-md">Calculadora</a>
-            <a href="#contacto"
-                class="block px-3 py-2 bg-yellow-600 text-slate-900 font-bold text-center rounded-md">Solicitar Demo</a>
-        </div>
-    </nav>
+                </li>
+                <li><a href="https://wa.me/584146023797" target="_blank"
+                        class="bg-green-600 text-white px-4 py-2 rounded-full font-bold text-sm hover:bg-green-500 transition"
+                        style="text-decoration: none;">
+                        <i class="fa-brands fa-whatsapp"></i> Asesor
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- HERO SECTION -->
     <header class="hero-bg pt-32 pb-20 lg:pt-48 lg:pb-32 overflow-hidden relative">
@@ -898,6 +881,7 @@ TONO: Práctico, educativo y enfocado en la eficiencia operativa. Eres el aliado
         // Init icons for the whole page
         lucide.createIcons();
     </script>
+    <script src="mobile-menu.js"></script>
 </body>
 
 </html>
