--- a/empresa/magnetron.html
+++ b/empresa/magnetron.html
@@ -55,47 +55,41 @@
 <body class="bg-slate-50 text-slate-900 selection:bg-indigo-500 selection:text-white font-sans">
 
     <!-- NAVIGATION -->
-    <nav class="sticky top-0 z-50 bg-white/95 backdrop-blur-md border-b border-slate-200 shadow-sm">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16 items-center">
-                <!-- Brand & Back Button -->
-                <div class="flex items-center gap-6">
-                    <a href="index.html"
-                        class="flex items-center gap-2 text-slate-500 hover:text-indigo-600 transition font-bold uppercase tracking-wider text-xs border-r border-slate-200 pr-6">
-                        <i class="fas fa-arrow-left"></i> Volver a Ultra Seco
-                    </a>
+    <header
+        class="fixed top-0 left-0 w-full z-[9999] bg-slate-900/95 backdrop-blur-md border-b border-slate-700 transition-all duration-300">
+        <nav
+            style="max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0.75rem 5%;">
+            <a href="index.html" class="logo">
+                <img src="images/logo.png" alt="Ultra Seco" style="height: 40px;">
+            </a>
 
-                    <div class="flex items-center gap-2">
-                        <i class="fas fa-magnet text-xl text-indigo-600"></i>
-                        <span class="text-xl font-bold font-heading tracking-tight text-slate-800">
-                            MAGNETRON<span class="text-indigo-600">™</span>
-                        </span>
-                    </div>
-                </div>
+            <!-- Mobile menu toggle button -->
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()" aria-label="Toggle menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
 
-                <!-- Desktop Menu -->
-                <div class="hidden md:flex items-center gap-6">
-                    <a href="#problema"
-                        class="text-xs font-bold text-slate-600 hover:text-indigo-600 transition uppercase tracking-wider">Problema</a>
-                    <a href="#solucion"
-                        class="text-xs font-bold text-slate-600 hover:text-indigo-600 transition uppercase tracking-wider">Solución</a>
-                    <a href="#proceso"
-                        class="text-xs font-bold text-slate-600 hover:text-indigo-600 transition uppercase tracking-wider">Proceso</a>
-                    <a href="#ciencia"
-                        class="text-xs font-bold text-slate-600 hover:text-indigo-600 transition uppercase tracking-wider">Ciencia</a>
-                    <button
-                        class="bg-indigo-600 text-white px-5 py-2 rounded text-xs font-bold shadow-lg shadow-indigo-200 hover:bg-indigo-700 transition flex items-center gap-2 uppercase tracking-widest">
-                        <i class="fas fa-shopping-cart"></i> Comprar
+            <ul class="nav-links flex items-center gap-6 list-none m-0 p-0">
+                <li><a href="index.html#inicio" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Inicio</a></li>
+                <li><a href="index.html#asesor" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Asesor IA</a></li>
+                <li><a href="index.html#productos" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Productos</a></li>
+                <li>
+                    <button onclick="window.history.back()"
+                        class="flex items-center gap-2 text-white hover:text-blue-400 font-bold bg-transparent border-none cursor-pointer transition">
+                        <i class="fa-solid fa-arrow-left"></i> Volver
                     </button>
-                </div>
-
-                <!-- Mobile Menu Button (Placeholder) -->
-                <button class="md:hidden text-slate-600">
-                    <i class="fas fa-bars text-xl"></i>
-                </button>
-            </div>
-        </div>
-    </nav>
+                </li>
+                <li><a href="https://wa.me/584146023797" target="_blank"
+                        class="bg-green-600 text-white px-4 py-2 rounded-full font-bold text-sm hover:bg-green-500 transition"
+                        style="text-decoration: none;">
+                        <i class="fa-brands fa-whatsapp"></i> Asesor
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <!-- HERO SECTION -->
@@ -605,6 +599,7 @@
             }
         });
     </script>
+    <script src="mobile-menu.js"></script>
 </body>
 
 </html>
