--- a/empresa/suavizante.html
+++ b/empresa/suavizante.html
@@ -29,27 +29,44 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <nav>
+    <!-- Navigation Bar -->
+    <header
+        class="fixed top-0 left-0 w-full z-[9999] bg-slate-900/95 backdrop-blur-md border-b border-slate-700 transition-all duration-300 no-print">
+        <nav
+            style="max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0.75rem 5%;">
             <a href="index.html" class="logo">
-                <i class="fa-solid fa-droplet"></i>
-                Ultra Seco
+                <img src="images/logo.png" alt="Ultra Seco" style="height: 40px;">
             </a>
-            <ul class="nav-links">
-                <li><a href="index.html" class="nav-button">Volver al Inicio</a></li>
+
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()" aria-label="Toggle menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
+            <ul class="nav-links flex items-center gap-6 list-none m-0 p-0">
+                <li><a href="index.html#inicio" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Inicio</a></li>
+                <li><a href="index.html#asesor" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Asesor IA</a></li>
+                <li><a href="index.html#productos" class="text-white hover:text-blue-400 font-semibold transition"
+                        style="text-decoration: none;">Productos</a></li>
                 <li>
-                    <button onclick="toggleCart()" class="nav-button"
-                        style="position: relative; background: none; border: none; cursor: pointer; color: inherit;">
-                        <i class="fa-solid fa-shopping-cart"></i>
-                        <span id="cart-badge"
-                            style="position: absolute; top: -5px; right: -10px; background: red; color: white; border-radius: 50%; padding: 2px 6px; font-size: 0.7rem; display: none;">0</span>
+                    <button onclick="window.history.back()"
+                        class="flex items-center gap-2 text-white hover:text-blue-400 font-bold bg-transparent border-none cursor-pointer transition">
+                        <i class="fa-solid fa-arrow-left"></i> Volver
                     </button>
                 </li>
-                <li><a href="index.html#contacto" class="nav-button">Contacto</a></li>
+                <li><a href="https://wa.me/584146023797" target="_blank"
+                        class="bg-green-600 text-white px-4 py-2 rounded-full font-bold text-sm hover:bg-green-500 transition"
+                        style="text-decoration: none;">
+                        <i class="fa-brands fa-whatsapp"></i> Asesor
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
+
+    <!-- Spacer to prevent content from going under fixed nav -->
+    <div style="height: 80px;"></div>
 
     <main>
         <!-- Hero Section -->
@@ -117,6 +134,8 @@
     </footer>
     <script src="catalog.js"></script>
     <script src="cart-integration.js"></script>
+    <script src="mobile-menu.js"></script>
+    <script src="mobile-menu.js"></script>
 </body>
 
 </html>
